@@ -1,5 +1,6 @@
 - WebAuth: Add support for "force_reapprove" parameter.
 - Add exception class for HTTP 507 error (over quota).
+- Put SDK version in HTTP request's "User-Agent" field.
 
 ---------------------------------------------
 1.1.5 (2015-02-23)
